--- a/SimpleInjector.Extensions.ScopedDependencyFactory/SimpleInjector.Extensions.ScopedDependencyFactory.csproj
+++ b/SimpleInjector.Extensions.ScopedDependencyFactory/SimpleInjector.Extensions.ScopedDependencyFactory.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="5.2.1" />
+  </ItemGroup>
+
 </Project>
